fix width on mobile

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -86,17 +86,17 @@
     width: 100%;
 
     .content {
-      margin: 0 ;
+      margin: 0;
       padding-top: 40px;
 
       .icons {
         width: 100%;
         overflow-y: hidden;
         overflow-x: scroll;
-        height: 70%;
+        height: 100%;
+        max-height: 360px;
 
         .icon {
-
           .arrow {
             display: none;
           }
@@ -104,15 +104,20 @@
           .icon-heart {
             display: none;
           }
-        };
+        }
       }
 
       .video {
         width: 100%;
+        max-width: 600px;
         margin: auto;
-        margin-left: 0;
         transform: none;
-        padding-top: 60px;
+        padding-top: 0px;
+
+        h3 {
+          display: block;
+          margin: 40px 0;
+        }
       }
     }
   }
