--- a/src/components/cta/CTA.scss
+++ b/src/components/cta/CTA.scss
@@ -25,7 +25,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 620px) {
   .cta {
     .container {
       padding: 0px;
@@ -49,6 +49,7 @@
 
         button {
           margin-right: 10px;
+          width: 50%;
 
           &.hollow {
             margin-right: 0;
