--- a/src/components/header/searchbar/Searchbar.scss
+++ b/src/components/header/searchbar/Searchbar.scss
@@ -41,5 +41,11 @@
 @media (max-width: 910px) {
   .searchbar {
     display: none;
+
+    .form {
+      button {
+        margin: 0;
+      }
+    }
   }
 }
